[B]2.9.3[/B]
UI Client
- Proper use of quality parameter
- Resolultion change for NextPVR 5.1.1
- Long-Up to hidden menu

[B]2.9.2[/B]
- Video OSD logging

[B]2.9.1[/B]
- Improved login logic
- Relogin on session change
UI Client
 - Logic change for Back key stopping video

[B]2.9.0[/B]
- Remove warning on no data in EPG
- Matrix and Leia comnpatibility for repo
- PVR mode for in progress recordings using JSON RPC
- Improved PVR mode for live tv
- Save SID state on rentry
- Deprecated API change
- Fix error handling of ExtraDirectory call
UI Client
- Don't open window when loading channel icons
- Timeout http calls

[B]2.8.0[/B]
- Added linux mouse support (via xdo)
- This is rc4 with no other changes

[B]2.8.0~rc3[/B]
- Fix odd indentation in last build

[B]2.8.0~rc2[/B]
- added windows mouse support to UI client

[B]2.8.0~rc1[/B]
- major EPG improvements by crackulator
- fixed several scrolling errors in EPG listings
- removed obsolete Estuary-classic skin
- allow modification of client reported to NextPVR

[B]2.8.0~a1[/B]
- test channels numbers as strings in EPG, find approx ATSC
- allow channel groups for listings

[B]2.7.4[/B]
- fixed missing colon from initial 2.7.3 upload
- fixed group selection

[B]2.7.3[/B]
- fixed httplib call in python3

[B]2.7.2[/B]
- fixed transcoding API calls

[B]2.7.1[/B]
- did not update datetime function for v4 connections
- improve hostname handling

[B]2.7.0[/B]
- most knewc python functions work with new api
UI Client
- prev key broken
- need to send certain key to get UI back when OSD is disabled.


[B]2.6.6[/B]
- fix ident

[B]2.6.5[/B]
- new startup spinner during initial connection
- additional fix for utf encoded filename in web client
- eliminate unnecessary resume point save in web client

[B]2.6.4[/B]
- fix utf encoded filename in web client

[B]2.6.3[/B]
- fix some int conversions lost on old_div

[B]2.6.2[/B]
- fix uname print
- fix basestring past from futurize

[B]2.6.1[/B]