@@ -216,10 +216,10 @@ WHERE_AM_I = __addonpath__
 
 # Script doc constants
 __scriptname__ = "knewc"
-__version__ = '2.9.3'
+__version__ = '2.9.4'
 __author__ = 'emveepee'
 __original_author__ = 'Ton van der Poel'
-__date__ = '2021-03-08'
+__date__ = '2021-03-29'
 
 XBMC_DIALOG_BUSY_OPEN = "ActivateWindow(busydialognocancel)"
 XBMC_DIALOG_BUSY_CLOSE = "Dialog.Close(busydialognocancel)"
